# coopy

./: .travis.yml  BUILD.md  BUILD.txt  CMakeLists.txt  COPYING.txt  ChangeLog  FORMATS.txt  README.TXT  README.md  README.txt  SERVE.txt  autogen.sh
bindings/: CMakeLists.txt  FindPHPLibs.cmake  coopy.i  example.py  numbers.csv
bindings/examples/: example.java  example.php  example.py  example.rb
merge3x2d/: .#CsvCompare.cpp  CMakeLists.txt  CsvColumn.cpp  CsvColumn.h  CsvCompare.cpp  CsvCompare.h  CsvMerge.cpp  CsvMerge.h  CsvPatch.cpp  CsvPatch.h  CsvSheet.cpp  CsvSheet.h  CsvStat.cpp  CsvStat.h  CsvStyle.cpp  CsvStyle.h  CsvWrite.cpp  CsvWrite.h  OrderResult.h
scanss/: CMakeLists.txt  CsvFile.cpp  CsvFile.h  CsvRender.cpp  CsvRender.h  csv2html.cpp  csv2html.css  csvdiff.cpp  scanss.cpp  stringify.cpp
scanss/libcsv/: csv.h
src/: CMakeLists.txt
src/coopy_scm/: CMakeLists.txt
src/coopy_scm/scripts/: FindwxWidgets.cmake  mingwin.cmake
src/coopy_scm/src/: csv_hooks.cpp  gui.cpp  main.cpp  ssfossil.cpp  ssfossil.h
src/emcc/: CMakeLists.txt  emdiff.cpp
src/gui/: CMakeLists.txt
src/gui/icon/: appicon.xpm
src/gui/src/: MergeFrame.cpp  MergeFrame.h  coopy.cpp  ssmerge_gui.cpp
src/jsoncpp/: CMakeLists.txt  test_jsoncpp.cpp
src/libaccess/: AccessSheet.cpp  AccessTextBook.cpp  CMakeLists.txt  test_access.cpp
src/libcoopy_core/: BookCompare.cpp  CMakeLists.txt  ColMan.cpp  ColumnInfo.cpp  CompareFlags.cpp  CsvSheet.cpp  CsvWrite.cpp  DataColumn.cpp  DataSheet.cpp  Dbg.cpp  FileIO.cpp  FloatSheet.cpp  FoldedSheet.cpp  FormatSniffer.cpp  Highlighter.cpp  IndexSniffer.cpp  MeasureMan.cpp  MergeOutputCsvDiff.cpp  MergeOutputCsvDiffV0p2.cpp  MergeOutputEditList.cpp  MergeOutputHumanDiff.cpp  MergeOutputIndex.cpp  MergeOutputNovel.cpp  MergeOutputPatch.cpp  MergeOutputSqlDiff.cpp  MergeOutputStats.cpp  MergeOutputTdiff.cpp  MergeOutputVerboseDiff.cpp  Merger.cpp  Mover.cpp  NameSniffer.cpp  OS.cpp  Patcher.cpp  PolySheet.cpp  Property.cpp  Reader.cpp  Sha1Generator.cpp  SheetCell.cpp  SheetCompare.cpp  SheetPatcher.cpp  (+4 more)
src/libcoopy_core/gnulib/: tempname.c
src/libcoopy_fold/: CMakeLists.txt  FoldTool.cpp
src/libcoopy_full/: BookHook.cpp.in  CMakeLists.txt  Coopy.cpp  CsvFile.cpp  CsvTextBook.cpp  Diff.cpp  Dummy.cpp  JsonBook.cpp  JsonProperty.cpp  Options.cpp  PatchParser.cpp  PolyBook.cpp  PoolImpl.cpp
src/libcoopy_full/gnulib_getopt/: getopt.c  getopt.h  getopt1.c  getopt_int.h
src/libcoopy_sqldiff/: CMakeLists.txt  README.txt  SqlCompare.cpp
src/libcoopyhx/: CMakeLists.txt  Coopyhx.cpp  CoopyhxLink.cpp
src/libcoopyhx/package/: CMakeLists.txt
src/libcsv/: CMakeLists.txt  CsvRead.cpp  csv.h  libcsv.c
src/libgnumeric/: CMakeLists.txt  GnumericSheet.cpp  GnumericTextBook.cpp  GnumericTextBookFactory.cpp  dummy.c  gnumeric_link.c  ss2html.cpp  test_gnumeric.cpp
src/libjackcess/: CMakeDetermineJavaCCompiler.cmake  CMakeJavaCCompiler.cmake.in  CMakeJavaCInformation.cmake  CMakeLists.txt  JackBox.java  JackSheet.cpp  JackTextBook.cpp  jackcess.java  test_jackcess.cpp
src/libjs/: CMakeLists.txt  JsWrap.cpp  codify.cpp
src/libremotesql/: CMakeLists.txt  RemoteSqlSheet.cpp  RemoteSqlTextBook.cpp  test_remotesql.cpp
src/libremotesql/sqlxx/: sqlxx.cc  sqlxx.h  strutilsxx.cc  strutilsxx.h  test.cpp
src/libsheet/: BookHook.cpp.in  CMakeLists.txt  Coopy.cpp  CsvFile.cpp  CsvTextBook.cpp  Diff.cpp  JsonBook.cpp  JsonProperty.cpp  Options.cpp  PatchParser.cpp  PolyBook.cpp  PoolImpl.cpp  ShortTextBook.cpp  SqliteTextBook.cpp
src/libsheet_core/: BookCompare.cpp  CMakeLists.txt  ColMan.cpp  ColumnInfo.cpp  CsvColumn.cpp  CsvCompare.cpp  CsvMerge.cpp  CsvPatch.cpp  CsvPatcher.cpp  CsvSheet.cpp  CsvStat.cpp  CsvStyle.cpp  CsvWrite.cpp  CvsCompare.h  DataBook.cpp  DataColumn.cpp  DataSheet.cpp  DataStat.cpp  Dbg.cpp  FileIO.cpp  FloatSheet.cpp  FormatSniffer.cpp  IndexSniffer.cpp  MeasureMan.cpp  MergeOutputAccum.cpp  MergeOutputCsvDiff.cpp  MergeOutputCsvDiffV0p2.cpp  MergeOutputFilter.cpp  MergeOutputHumanDiff.cpp  MergeOutputIndex.cpp  MergeOutputPatch.cpp  MergeOutputRowOps.cpp  MergeOutputSqlDiff.cpp  MergeOutputTdiff.cpp  MergeOutputVerboseDiff.cpp  Merger.cpp  Mover.cpp  NameSniffer.cpp  OS.cpp  OrderMerge.cpp  (+19 more)
src/libsheet_core/gnulib/: tmpdir.c
src/libsheet_fold/: CMakeLists.txt  FoldTool.cpp  FoldedSheet.cpp
src/libsocialcalc/: CMakeLists.txt  JsWrap.cpp  SocialCalc.cpp  SocialCalcSheet.cpp  SocialCalcTextBook.cpp  SocialCalcTextBookFactory.cpp
src/libsocialcalc/js/: socialcalcspreadsheetcontrol.js  socialcalcwrap.js
src/libsqlite/: CMakeLists.txt  SqliteSheet.cpp  SqliteTextBook.cpp  test_sqlite.cpp
src/light/: CMakeLists.txt  test_light.cpp  test_light_js.cpp
src/light/cpp/: DiffRender.cpp
src/ruby/: CMakeLists.txt  coopy_diff.rb  coopy_patch.rb  dbi_sql_wrapper.rb  diff_apply_sql.rb  diff_columns.rb  diff_output.rb  diff_output_group.rb  diff_output_table.rb  diff_output_tdiff.rb  diff_parser.rb  for_scraperwiki.sh  row_change.rb  scraperwiki_sql_wrapper.rb  scraperwiki_utils.rb  sql_compare.rb  sqlite_diff.rb  sqlite_sql_wrapper.rb
src/ssdiff/: CMakeLists.txt  ssdiff.cpp  ssrediff.cpp
src/ssfold/: CMakeLists.txt  ssfold.cpp
src/ssformat/: CMakeLists.txt  ssformat.cpp
src/ssfossil/: CMakeLists.txt  previous.uuid  update.sh
src/ssinsert/: CMakeLists.txt  README.txt  dummy.c  gnumeric_link.c  gnumeric_link.h  mingw_gnumeric.cmake  ssinsert.c  ssinsert.cpp  ssinsert_pass1.c
src/sslive/: CMakeLists.txt  sslive.cpp
src/ssmanip/: CMakeLists.txt  CsvColumn.cpp  CsvColumn.h  CsvMerge.cpp  CsvStat.h  CsvWrite.cpp
src/ssmanip2/: CMakeLists.txt
src/ssmerge/: CMakeLists.txt  csvmerge.cpp  csvpatch.cpp  scanss.cpp  ssmerge.cpp  ssresolve.cpp
src/sspatch/: CMakeLists.txt  sspatch.cpp
src/ssrender/: CMakeLists.txt  CsvRender.cpp  csv2html.cpp  csv2html.css  stringify.cpp
src/testing/: CMakeLists.txt  eol.cpp  harness.cmake  make_sheet.cpp  test_sheet.cpp  test_viterbi.cpp
src/widesheet/: CMakeLists.txt  README.txt  WideSheet.cpp  WideSheet.h  WideSheetManager.cpp  WideSheetManager.h  main.cpp  widesheet.cpp
(+940 files in other folders)
