cmake_minimum_required(VERSION 2.6)

project(coopy)

enable_testing()

set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
message(STATUS "Libraries are placed in ${LIBRARY_OUTPUT_PATH}")
message(STATUS "Executables are placed in ${EXECUTABLE_OUTPUT_PATH}")
# Make sure the directories actually exist
make_directory(${LIBRARY_OUTPUT_PATH})
make_directory(${EXECUTABLE_OUTPUT_PATH})

# three-way merges of a 2D array
add_subdirectory(merge3x2d)

# probing properties of sheets
add_subdirectory(scanss)

# fossil integration
add_subdirectory(sheet_scm)

SET(COOPY_VERSION_MAJOR "0")
SET(COOPY_VERSION_MINOR "1")
SET(COOPY_VERSION_PATCH "7")
SET(COOPY_VERSION_MODIFIER "")

SET(CPACK_PACKAGE_VERSION_MAJOR "${COOPY_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${COOPY_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${COOPY_VERSION_PATCH}${COOPY_VERSION_MODIFIER}")

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Coopy")
SET(CPACK_PACKAGE_NAME "coopy")
SET(CPACK_PACKAGE_VENDOR "DCP")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.TXT")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/GPL.TXT")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME
  "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
IF (WIN32)
  SET(CPACK_PACKAGE_FILE_NAME 
  "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
ELSE (WIN32)
  SET(CPACK_PACKAGE_FILE_NAME 
  "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}-bin")
ENDIF (WIN32)
SET(CPACK_CREATE_DESKTOP_LINKS "coopy")
SET(CPACK_NSIS_DISPLAY_NAME "Coopy")
SET(CPACK_NSIS_URL_INFO_ABOUT "http://coopy.sourceforge.net")

SET(CPACK_STRIP_FILES ON)
SET(CPACK_PACKAGE_INSTALL_REGISTRY_KEY "coopy")
SET(CPACK_SOURCE_IGNORE_FILES ${CPACK_SOURCE_IGNORE_FILES} "~$" ".svn$" ".svn/.*$" ".git$" ".git/.*$")

IF (WIN32)
  SET(CPACK_GENERATOR "NSIS")
ELSEIF (WIN32)
  SET(CPACK_GENERATOR "TGZ")
ENDIF (WIN32)

SET(CPACK_PACKAGE_EXECUTABLES "coopy;coopy")
SET(CPACK_NSIS_INSTALLED_ICON_NAME "bin/coopy.exe")
SET(CPACK_NSIS_MUI_ICON "${CMAKE_CURRENT_SOURCE_DIR}/src/icon/appicon.ico")
INCLUDE(CPack)

